# exempi

./: NEWS  README.md  configure.ac  meson.build
XMPCore/source/: meson.build
XMPFiles/source/: meson.build
build-aux/: dist-exclude.sh
exempi/: exempi.cpp  meson.build
exempi/tests/: test-adobesdk.cpp
source/: meson.build
