
# XXX CXXFLAGS


xmpcommon = static_library(
  'xmpcommon',

#  'UnicodeInlines.incl_cpp',
  'UnicodeConversions.cpp',
  'XML_Node.cpp',
  'XMPFiles_IO.cpp',
  'XMP_LibUtils.hpp',
  'XMP_LibUtils.cpp',
  'XIO.cpp',
  'Host_IO-POSIX.cpp',
  'XMP_ProgressTracker.hpp',
  'XMP_ProgressTracker.cpp',
  'PerfUtils.hpp',
  'PerfUtils.cpp',
  'IOUtils.hpp',
  'IOUtils.cpp',
  'SafeStringAPIs.h',
  'SuppressSAL.h',
  'SafeTypes.h',

  include_directories: [
    '..'
  ]
)
