
xmpcore = static_library(
  'XMPCore',

  'ExpatAdapter.cpp',
  'WXMPIterator.cpp',
  'WXMPUtils.cpp',
  'XMPIterator.cpp',
  'XMPMeta-GetSet.cpp',
  'XMPMeta-Serialize.cpp',
  'XMPUtils-FileInfo.cpp',
  'ParseRDF.cpp',
  'WXMPMeta.cpp',
  'XMPCore_Impl.cpp',
  'XMPMeta.cpp',
  'XMPMeta2.hpp',
  'XMPMeta-Parse.cpp',
  'XMPUtils.cpp',

  include_directories: [
    '../..',
    '../../public/include'
  ]
)
