
if host_machine.system() == 'darwin'
  platform_utils = files('PluginHandler' / 'OS_Utils_Mac.cpp')
elif host_machine.system() == 'windows'
  platform_utils = files('PluginHandler' / 'OS_Utils_WIN.cpp')
else
  platform_utils = files('PluginHandler' / 'OS_Utils_Linux.cpp')
endif

xmpfiles = static_library(
  'xmpfiles',

  'WXMPFiles.cpp',
  'XMPFiles.cpp',
  'XMPFiles_Impl.cpp',
  'HandlerRegistry.cpp',

  'FileHandlers/AIFF_Handler.cpp',
  'FileHandlers/AIFF_Handler.hpp',
  'FileHandlers/ASF_Handler.cpp',
  'FileHandlers/ASF_Handler.hpp',
  'FileHandlers/AVCHD_Handler.cpp',
  'FileHandlers/AVCHD_Handler.hpp',
  'FileHandlers/Basic_Handler.cpp',
  'FileHandlers/Basic_Handler.hpp',
  'FileHandlers/FLV_Handler.cpp',
  'FileHandlers/FLV_Handler.hpp',
  'FileHandlers/InDesign_Handler.cpp',
  'FileHandlers/InDesign_Handler.hpp',
  'FileHandlers/JPEG_Handler.cpp',
  'FileHandlers/JPEG_Handler.hpp',
  'FileHandlers/MP3_Handler.cpp',
  'FileHandlers/MP3_Handler.hpp',
  'FileHandlers/MPEG2_Handler.cpp',
  'FileHandlers/MPEG2_Handler.hpp',
  'FileHandlers/MPEG4_Handler.cpp',
  'FileHandlers/MPEG4_Handler.hpp',
  'FileHandlers/P2_Handler.cpp',
  'FileHandlers/P2_Handler.hpp',
  'FileHandlers/PNG_Handler.cpp',
  'FileHandlers/PNG_Handler.hpp',
  'FileHandlers/PostScript_Handler.cpp',
  'FileHandlers/PostScript_Handler.hpp',
  'FileHandlers/PSD_Handler.cpp',
  'FileHandlers/PSD_Handler.hpp',
  'FileHandlers/RIFF_Handler.cpp',
  'FileHandlers/RIFF_Handler.hpp',
  'FileHandlers/Scanner_Handler.cpp',
  'FileHandlers/Scanner_Handler.hpp',
  'FileHandlers/SonyHDV_Handler.cpp',
  'FileHandlers/SonyHDV_Handler.hpp',
  'FileHandlers/SWF_Handler.cpp',
  'FileHandlers/SWF_Handler.hpp',
  'FileHandlers/SVG_Handler.cpp',
  'FileHandlers/SVG_Handler.hpp',
  'FileHandlers/TIFF_Handler.cpp',
  'FileHandlers/TIFF_Handler.hpp',
  'FileHandlers/Trivial_Handler.cpp',
  'FileHandlers/Trivial_Handler.hpp',
  'FileHandlers/UCF_Handler.cpp',
  'FileHandlers/UCF_Handler.hpp',
  'FileHandlers/XDCAMEX_Handler.cpp',
  'FileHandlers/XDCAMEX_Handler.hpp',
  'FileHandlers/XDCAM_Handler.cpp',
  'FileHandlers/XDCAM_Handler.hpp',
  'FileHandlers/XDCAMFAM_Handler.cpp',
  'FileHandlers/XDCAMFAM_Handler.hpp',
  'FileHandlers/XDCAMSAM_Handler.cpp',
  'FileHandlers/XDCAMSAM_Handler.hpp',
  'FileHandlers/WAVE_Handler.cpp',
  'FileHandlers/WAVE_Handler.hpp',
  'FileHandlers/GIF_Handler.cpp',
  'FileHandlers/GIF_Handler.hpp',
  'FileHandlers/WEBP_Handler.cpp',
  'FileHandlers/WEBP_Handler.hpp',

  'FormatSupport/PackageFormat_Support.cpp',
  'FormatSupport/PackageFormat_Support.hpp',
  'FormatSupport/PostScript_Support.cpp',
  'FormatSupport/PostScript_Support.hpp',
  'FormatSupport/PSIR_FileWriter.cpp',
  'FormatSupport/Reconcile_Impl.cpp',
  'FormatSupport/ReconcileTIFF.cpp',
  'FormatSupport/TIFF_MemoryReader.cpp',
  'FormatSupport/IPTC_Support.cpp',
  'FormatSupport/PSIR_MemoryReader.cpp',
  'FormatSupport/ReconcileIPTC.cpp',
  'FormatSupport/RIFF.cpp',
  'FormatSupport/RIFF.hpp',
  'FormatSupport/ID3_Support.cpp',
  'FormatSupport/ID3_Support.hpp',
  'FormatSupport/RIFF_Support.cpp',
  'FormatSupport/TIFF_Support.cpp',
  'FormatSupport/ISOBaseMedia_Support.hpp',
  'FormatSupport/ISOBaseMedia_Support.cpp',
  'FormatSupport/PNG_Support.cpp',
  'FormatSupport/ReconcileLegacy.cpp',
  'FormatSupport/GIF_Support.cpp',
  'FormatSupport/SWF_Support.hpp',
  'FormatSupport/SWF_Support.cpp',
  'FormatSupport/XDCAM_Support.hpp',
  'FormatSupport/XDCAM_Support.cpp',
  'FormatSupport/TIFF_FileWriter.cpp',
  'FormatSupport/XMPScanner.cpp',
  'FormatSupport/META_Support.cpp',
  'FormatSupport/META_Support.hpp',
  'FormatSupport/MOOV_Support.cpp',
  'FormatSupport/MOOV_Support.hpp',
  'FormatSupport/QuickTime_Support.cpp',
  'FormatSupport/ASF_Support.hpp',
  'FormatSupport/ASF_Support.cpp',
  'FormatSupport/MacScriptExtracts.h',
  'FormatSupport/TimeConversionUtils.cpp',
  'FormatSupport/TimeConversionUtils.hpp',
  'FormatSupport/AIFF/AIFFBehavior.cpp',
  'FormatSupport/AIFF/AIFFBehavior.h',
  'FormatSupport/AIFF/AIFFMetadata.cpp',
  'FormatSupport/AIFF/AIFFMetadata.h',
  'FormatSupport/AIFF/AIFFReconcile.cpp',
  'FormatSupport/AIFF/AIFFReconcile.h',
  'FormatSupport/IFF/ChunkController.cpp',
  'FormatSupport/IFF/Chunk.cpp',
  'FormatSupport/IFF/ChunkPath.cpp',
  'FormatSupport/IFF/IChunkBehavior.cpp',
  'FormatSupport/IFF/IChunkContainer.h',
  'FormatSupport/IFF/ChunkController.h',
  'FormatSupport/IFF/Chunk.h',
  'FormatSupport/IFF/ChunkPath.h',
  'FormatSupport/IFF/IChunkBehavior.h',
  'FormatSupport/IFF/IChunkData.h',
  'FormatSupport/WAVE/BEXTMetadata.cpp',
  'FormatSupport/WAVE/CartMetadata.h',
  'FormatSupport/WAVE/DISPMetadata.cpp',
  'FormatSupport/WAVE/INFOMetadata.h',
  'FormatSupport/WAVE/WAVEBehavior.cpp',
  'FormatSupport/WAVE/WAVEReconcile.h',
  'FormatSupport/WAVE/BEXTMetadata.h',
  'FormatSupport/WAVE/Cr8rMetadata.cpp',
  'FormatSupport/WAVE/DISPMetadata.h',
  'FormatSupport/WAVE/PrmLMetadata.cpp',
  'FormatSupport/WAVE/WAVEBehavior.h',
  'FormatSupport/WAVE/CartMetadata.cpp',
  'FormatSupport/WAVE/Cr8rMetadata.h',
  'FormatSupport/WAVE/INFOMetadata.cpp',
  'FormatSupport/WAVE/PrmLMetadata.h',
  'FormatSupport/WAVE/WAVEReconcile.cpp',
  'FormatSupport/WAVE/iXMLMetadata.h',
  'FormatSupport/WAVE/iXMLMetadata.cpp',
  'FormatSupport/P2_Support.hpp',
  'FormatSupport/P2_Support.cpp',
  'FormatSupport/SVG_Adapter.hpp',
  'FormatSupport/SVG_Adapter.cpp',
  'FormatSupport/WEBP_Support.hpp',
  'FormatSupport/WEBP_Support.cpp',

  'NativeMetadataSupport/IMetadata.cpp',
  'NativeMetadataSupport/IMetadata.h',
  'NativeMetadataSupport/IReconcile.cpp',
  'NativeMetadataSupport/IReconcile.h',
  'NativeMetadataSupport/MetadataSet.cpp',
  'NativeMetadataSupport/MetadataSet.h',
  'NativeMetadataSupport/ValueObject.h',

  'PluginHandler/FileHandler.h',
  'PluginHandler/FileHandlerInstance.cpp',
  'PluginHandler/FileHandlerInstance.h',
  'PluginHandler/HostAPIImpl.cpp',
  'PluginHandler/Module.cpp',
  'PluginHandler/Module.h',
  'PluginHandler/ModuleUtils.h',
  'PluginHandler/PluginManager.cpp',
  'PluginHandler/PluginManager.h',
  'PluginHandler/XMPAtoms.cpp',
  'PluginHandler/XMPAtoms.h',

  platform_utils,

  include_directories: [
    '../..',
    '../../public/include',
    '../../XMPFilesPlugins/api/source'
  ]
)
